--- a/client/QuizGame/Styles/style.css
+++ b/client/QuizGame/Styles/style.css
@@ -38,8 +38,7 @@
         border: none; /* Remove the default border */
         background: white; /* Fallback */
         background: rgba(255,255,255,0.2);
-        box-shadow: 
-            inset 0 0 10px rgba(255,255,255,0.5);
+        box-shadow: inset 0 0 10px rgba(255,255,255,0.5);
  
         text-indent: 10px;
         color: #fff;
@@ -156,7 +155,7 @@
         font-size: 20px;
         text-shadow: 0 1px 0 rgba(255,255,255,0.4);
     }
-
+    
     .game-window ul {
         padding:0;
     }
@@ -168,18 +167,52 @@
         text-shadow: 0 1px 0 rgba(255,255,255,0.4);
     }
 
+#answer{
+    width: 70%;
+    height: 45px;
+    float:left;
 
+    border-radius: 5px 0 0 5px;
+    border: 1px solid #fff;
+    border-right: none;
 
+    background: white; /* Fallback */
+    background: rgba(255,255,255,0.2);
+    box-shadow: inset 0 0 10px rgba(255,255,255,0.5);
+
+    color: #8d1645;
+    text-indent: 10px;
+    font-size: 20px;
+    text-shadow: 0 1px 0 rgba(255,255,255,0.4);
+}
+
+#next-question {
+        margin:0;
+        width:25%;
+        padding: 10px 5px;
+        display:inline-block;
+        float:left;
+        
+        border-radius: 0 5px 5px 0;
+        border-left: 1px solid silver;
+}
+
+#stop-button{
+    width: 30%;
+    margin: 75px 0 0 0 ;
+    clear:left;
+}
 
 #question{
-    width: 100px;
-    height: auto;
-    
+    width: 70%;
+    height: 110px;
+    margin-bottom: 20px;
 }
 
 .message{
-    width: 20px;
+    width: 35px;
     height: auto;
+    margin: 0 0 20px 20px;
 }
 
 
